# Short-Circuit-Benders

./: .gitignore  Bender2.jl  CMakeLists.txt  README.md
Instance/: GenLP.jl  GenLPTrue.jl  Generator.sh  GeneratorTrue.sh  Solve_Bender.sh  readSol.py
Instance/Instance_2P_10C_1H_10PE/: Inst_2P_10C_1H_2PP_2Co_1.data  Inst_2P_10C_1H_2PP_2Co_10.data  Inst_2P_10C_1H_2PP_2Co_11.data  Inst_2P_10C_1H_2PP_2Co_2.data  Inst_2P_10C_1H_2PP_2Co_4.data  Inst_2P_10C_1H_2PP_2Co_5.data  Inst_2P_10C_1H_2PP_2Co_6.data  Inst_2P_10C_1H_2PP_2Co_7.data  Inst_2P_10C_1H_2PP_2Co_8.data  Inst_2P_10C_1H_2PP_2Co_9.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_10C_1H_5PE/: Inst_2P_10C_1H_2PP_2Co_1.data  Inst_2P_10C_1H_2PP_2Co_10.data  Inst_2P_10C_1H_2PP_2Co_11.data  Inst_2P_10C_1H_2PP_2Co_12.data  Inst_2P_10C_1H_2PP_2Co_2.data  Inst_2P_10C_1H_2PP_2Co_4.data  Inst_2P_10C_1H_2PP_2Co_6.data  Inst_2P_10C_1H_2PP_2Co_7.data  Inst_2P_10C_1H_2PP_2Co_8.data  Inst_2P_10C_1H_2PP_2Co_9.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_10C_2H_10PE/: Inst_2P_10C_2H_2PP_2Co_1.data  Inst_2P_10C_2H_2PP_2Co_10.data  Inst_2P_10C_2H_2PP_2Co_11.data  Inst_2P_10C_2H_2PP_2Co_13.data  Inst_2P_10C_2H_2PP_2Co_14.data  Inst_2P_10C_2H_2PP_2Co_15.data  Inst_2P_10C_2H_2PP_2Co_17.data  Inst_2P_10C_2H_2PP_2Co_2.data  Inst_2P_10C_2H_2PP_2Co_5.data  Inst_2P_10C_2H_2PP_2Co_7.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_10C_2H_5PE/: Inst_2P_10C_2H_2PP_2Co_1.data  Inst_2P_10C_2H_2PP_2Co_10.data  Inst_2P_10C_2H_2PP_2Co_11.data  Inst_2P_10C_2H_2PP_2Co_2.data  Inst_2P_10C_2H_2PP_2Co_3.data  Inst_2P_10C_2H_2PP_2Co_4.data  Inst_2P_10C_2H_2PP_2Co_5.data  Inst_2P_10C_2H_2PP_2Co_6.data  Inst_2P_10C_2H_2PP_2Co_7.data  Inst_2P_10C_2H_2PP_2Co_9.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_20C_1H_10PE/: Inst_2P_20C_1H_2PP_2Co_10.data  Inst_2P_20C_1H_2PP_2Co_11.data  Inst_2P_20C_1H_2PP_2Co_12.data  Inst_2P_20C_1H_2PP_2Co_13.data  Inst_2P_20C_1H_2PP_2Co_14.data  Inst_2P_20C_1H_2PP_2Co_18.data  Inst_2P_20C_1H_2PP_2Co_2.data  Inst_2P_20C_1H_2PP_2Co_4.data  Inst_2P_20C_1H_2PP_2Co_5.data  Inst_2P_20C_1H_2PP_2Co_7.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_20C_1H_5PE/: Inst_2P_20C_1H_2PP_2Co_1.data  Inst_2P_20C_1H_2PP_2Co_10.data  Inst_2P_20C_1H_2PP_2Co_2.data  Inst_2P_20C_1H_2PP_2Co_3.data  Inst_2P_20C_1H_2PP_2Co_4.data  Inst_2P_20C_1H_2PP_2Co_5.data  Inst_2P_20C_1H_2PP_2Co_6.data  Inst_2P_20C_1H_2PP_2Co_7.data  Inst_2P_20C_1H_2PP_2Co_8.data  Inst_2P_20C_1H_2PP_2Co_9.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_20C_2H_10PE/: Inst_2P_20C_2H_2PP_2Co_10.data  Inst_2P_20C_2H_2PP_2Co_12.data  Inst_2P_20C_2H_2PP_2Co_13.data  Inst_2P_20C_2H_2PP_2Co_16.data  Inst_2P_20C_2H_2PP_2Co_17.data  Inst_2P_20C_2H_2PP_2Co_18.data  Inst_2P_20C_2H_2PP_2Co_19.data  Inst_2P_20C_2H_2PP_2Co_2.data  Inst_2P_20C_2H_2PP_2Co_6.data  Inst_2P_20C_2H_2PP_2Co_7.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_20C_2H_5PE/: Inst_2P_20C_2H_2PP_2Co_1.data  Inst_2P_20C_2H_2PP_2Co_10.data  Inst_2P_20C_2H_2PP_2Co_2.data  Inst_2P_20C_2H_2PP_2Co_3.data  Inst_2P_20C_2H_2PP_2Co_4.data  Inst_2P_20C_2H_2PP_2Co_5.data  Inst_2P_20C_2H_2PP_2Co_6.data  Inst_2P_20C_2H_2PP_2Co_7.data  Inst_2P_20C_2H_2PP_2Co_8.data  Inst_2P_20C_2H_2PP_2Co_9.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_30C_1H_10PE/: Inst_2P_30C_1H_2PP_2Co_1.data  Inst_2P_30C_1H_2PP_2Co_10.data  Inst_2P_30C_1H_2PP_2Co_12.data  Inst_2P_30C_1H_2PP_2Co_13.data  Inst_2P_30C_1H_2PP_2Co_16.data  Inst_2P_30C_1H_2PP_2Co_17.data  Inst_2P_30C_1H_2PP_2Co_2.data  Inst_2P_30C_1H_2PP_2Co_5.data  Inst_2P_30C_1H_2PP_2Co_8.data  Inst_2P_30C_1H_2PP_2Co_9.data  Sol.csv  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
Instance/Instance_2P_30C_1H_5PE/: Inst_2P_30C_1H_2PP_2Co_1.data  Inst_2P_30C_1H_2PP_2Co_10.data  Inst_2P_30C_1H_2PP_2Co_2.data  Inst_2P_30C_1H_2PP_2Co_3.data  Inst_2P_30C_1H_2PP_2Co_4.data  Inst_2P_30C_1H_2PP_2Co_5.data  Inst_2P_30C_1H_2PP_2Co_6.data  Inst_2P_30C_1H_2PP_2Co_7.data  Inst_2P_30C_1H_2PP_2Co_8.data  Inst_2P_30C_1H_2PP_2Co_9.data  Sol_ALL-MS_3600.csv  Sol_All-FF_3600.csv  Sol_All-GAP_3600.csv  Sol_All-IC_3600.csv  Sol_All-RS_3600.csv  Sol_All_14400.csv  Sol_All_3600.csv  Sol_CPLEX_14400.csv  Sol_CPLEX_3600.csv  Sol_Default_3600.csv
cmake/: FindBcpRcsp.cmake  FindCPLEX.cmake  FindLEMON.cmake
config/: bc.cfg  bc2.cfg
include/: Data.h  InputUser.h  Loader.h  Model.h  Parameters.h  RCSPSolver.h  Singleton.h
src/: Bapcod.hpp  Bender.hpp  Cplex.hpp  Heuristic.hpp  MyInstance.hpp  main.cpp
(+520 files in other folders)
